--- a/v2.html
+++ b/v2.html
@@ -69,17 +69,17 @@
                </a>
             </li>
             <li>
-               <a data-link="amenitiess" class="relative pointer-events-auto flex justify-center " href="javascript:;">
+               <a data-link="amenities" class="relative pointer-events-auto flex justify-center " href="javascript:;">
                   <span>Amenities</span>
                </a>
             </li>
             <li>
-               <a data-link="variantss" class="relative pointer-events-auto flex justify-center " href="javascript:;">
+               <a data-link="variants" class="relative pointer-events-auto flex justify-center " href="javascript:;">
                   <span>Variants</span>
                </a>
             </li>
             <li>
-               <a data-link="enquires" class="relative pointer-events-auto flex justify-center " href="javascript:;">
+               <a data-link="enquire" class="relative pointer-events-auto flex justify-center " href="javascript:;">
                   <span>ENQUIRE</span>
                </a>
             </li>
@@ -102,17 +102,17 @@
                </a>
             </li>
             <li class="w-full">
-               <a data-link="amenitiess" class="relative pointer-events-auto flex " href="javascript:;">
+               <a data-link="amenities" class="relative pointer-events-auto flex " href="javascript:;">
                <span>Amenities</span>
                </a>
             </li>
             <li class="w-full">
-               <a data-link="variantss"  class="relative pointer-events-auto flex " href="javascript:;">
+               <a data-link="variants"  class="relative pointer-events-auto flex " href="javascript:;">
                <span>Variants</span>
                </a>
             </li>
             <li class="w-full">
-               <a data-link="enquires" class="relative pointer-events-auto flex " href="javascript:;">
+               <a data-link="enquire" class="relative pointer-events-auto flex " href="javascript:;">
                <span>ENQUIRE</span>
                </a>
             </li>
@@ -136,7 +136,7 @@
    <article class="relative w-full" data-taxi-view="default">
       <div class="js-overlay bg-black fixed top-0 left-0 right-0 bottom-0 z-3 pointer-events-none opacity-0"></div>
       <div class="inner relative">
-         <div id="walkthrough" class="walkthrough js-hero relative overflow-hidden  is-dark">
+         <div class="walkthroughs js-hero relative overflow-hidden  is-dark">
             <div class="relative px-20 flex items-center s:justify-center s:min-h-screen h-full-screen">
                <div class="absolute z-1 top-0 left-0 w-full h-full bg-gradient-to-b from-[#CEE7EF] via-[#E4E4E4] to-[#EFC2B3]" data-speed="-0.2"></div>
                <div class="h-full w-full absolute top-0 left-0 js-pr" data-speed="-0.35">
