--- a/v2.html
+++ b/v2.html
@@ -2219,6 +2219,18 @@ ul.tabs.flex {
     fill: #fff !important;
     color: #fff;
 }
+header ul li a.active:after {
+    width: 100%;
+}
+header ul li a:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 0;
+    height: 2px;
+    background: #fff;
+}
 </style>
 </body>
 </html>
