--- a/v2.html
+++ b/v2.html
@@ -2231,6 +2231,9 @@ header ul li a:after {
     height: 2px;
     background: #fff;
 }
+header ul li a.active {
+   background: transparent !important;
+}
 </style>
 </body>
 </html>
