--- a/v2.html
+++ b/v2.html
@@ -695,8 +695,8 @@
                         <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
                         <figure
                            class="figurwcap overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-                           <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa2.jpg" src="img/v2/villa2.jpg" width="1440" height="1920" alt="Stevens Media Room 3"/>
-                           <div class="caption">Exterior</div>
+                           <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/masterplan.jpg" src="img/masterplan.jpg" width="1440" height="1920" alt="Stevens Media Room 3"/>
+                           <div class="caption">Master Plan</div>
                         </figure>
                         </div>
                      </div>
@@ -708,8 +708,47 @@
                         <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
                         <figure
                            class="figurwcap overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-                           <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v3/villa1.jpg" src="img/v3/villa1.jpg" width="1440" height="1920" alt="Stevens Bath 19"/>
-                           <div class="caption">Interior</div>
+                           <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/V2-FLOOR-PLANS-1.jpg" src="img/V2-FLOOR-PLANS-1.jpg" width="1440" height="1920" alt="Stevens Bath 19"/>
+                           <div class="caption">GROUND FLOOR - V2 FLOOR PLAN</div>
+                        </figure>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="slide">
+                  <div class="slide-item pl-20">
+                     <div class="w-full overflow-hidden js-s-image-mask" data-delay="0.1">
+                        <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
+                        <figure
+                           class="figurwcap overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
+                           <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/YOOVILLAS---V2-FLOOR-PLANS-2.jpg" src="img/YOOVILLAS---V2-FLOOR-PLANS-2.jpg" width="1440" height="1920" alt="Stevens Bath 19"/>
+                           <div class="caption">FIRST FLOOR - V2 FLOOR PLAN</div>
+                        </figure>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="slide">
+                  <div class="slide-item pl-20">
+                     <div class="w-full overflow-hidden js-s-image-mask" data-delay="0.1">
+                        <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
+                        <figure
+                           class="figurwcap overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
+                           <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/YOOVILLAS---V3-FLOOR-PLANS-1.jpg" src="img/YOOVILLAS---V3-FLOOR-PLANS-1.jpg" width="1440" height="1920" alt="Stevens Bath 19"/>
+                           <div class="caption">GROUND FLOOR - V3 FLOOR PLAN</div>
+                        </figure>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="slide">
+                  <div class="slide-item pl-20">
+                     <div class="w-full overflow-hidden js-s-image-mask" data-delay="0.1">
+                        <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
+                        <figure
+                           class="figurwcap overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
+                           <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/YOOVILLAS---V3-FLOOR-PLANS-2.jpg" src="img/YOOVILLAS---V3-FLOOR-PLANS-2.jpg" width="1440" height="1920" alt="Stevens Bath 19"/>
+                           <div class="caption">FIRST FLOOR - V3 FLOOR PLAN</div>
                         </figure>
                         </div>
                      </div>
@@ -1840,6 +1879,27 @@
 
 </script>
 <style>
+@font-face {
+   font-family: 'Futura BK BT';
+   src: url('img/FUTURABOOKFONT.woff2') format('woff2'),
+         url('img/FUTURABOOKFONT.woff') format('woff');
+   font-weight: normal;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: 'Futura Lt';
+   src: url('img/FUTURALT-BOOK.woof2') format('woff2'),
+         url('img/FUTURALT-BOOK.woff') format('woff');
+   font-weight: normal;
+   font-style: normal;
+}
+h1, h2, h3, h4, h5, h6 {
+   font-family: 'Futura BK BT' !important;
+}
+body, p {
+   font-family: 'Futura Lt' !important;
+}
 header.scrolled {
     background: rgb(255 255 255 / 40%);
 }
@@ -2233,6 +2293,13 @@ header ul li a:after {
 }
 header ul li a.active {
    background: transparent !important;
+}
+.fillimageslider img {
+    object-fit: contain !important;
+}
+.fillimageslider {
+    max-width: 1100px;
+    margin: 0 auto;
 }
 </style>
 </body>
