--- a/v2.html
+++ b/v2.html
@@ -1894,10 +1894,10 @@
    font-weight: normal;
    font-style: normal;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .reviewcontent .font-heading {
    font-family: 'Futura BK BT' !important;
 }
-body, p {
+body, p, .line {
    font-family: 'Futura Lt' !important;
 }
 header.scrolled {
@@ -2265,6 +2265,9 @@ ul.tabs.flex {
 }
 .contactfix i {
    margin-right: 0px;
+}
+.figurwcap .caption {
+    font-size: 18px;
 }
 }
 .nav-inner svg, .nav-inner svg path, .nav-inner ul li a {
