--- a/v2.html
+++ b/v2.html
@@ -1538,7 +1538,7 @@
          </div>
          <a href="" target="_blank" rel="noreferrer" aria-label="Visit DLC website" class="block next-case px-20 pb-20 w-full mt-40 s:mt-0">
             <div class="block justify-between">
-               <figure class="relative w-full s:w-[40%] h-[45rem] ml-auto featurelastimg" style="margin-bottom: -8rem;z-index: 1;">
+               <figure class="relative w-full s:w-[40%] h-[45rem] ml-auto featurelastimg" style="margin-bottom: 40px;z-index: 1;">
                   <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover slider-image js-lazy" data-src="img/feature5.png" src="img/feature5.png" width="300" height="185" alt="Home" />
                </figure>
             </div>
