--- a/v3.html
+++ b/v3.html
@@ -258,84 +258,93 @@
          <div id="map" style="height: 650px;"></div>
          <div class="gogglelisting">
             <div class="t-n-t gutter">
-               <div class="listwrapper">
+              <div class="listwrapper">
                   <div class="listingslider">
-                     <div class="listslide">
-                        <div class="slidewrap">
-                           <select>
-                              <option value="MC">Medical Centres <span>(2)</span></option>
-                              <option value="CAH" lat="18.5512" lang="73.9350">Columbia Asia Hospital</option>
-                              <option value="MH"  lat="18.5089" lang="73.9256">Noble Hospital</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="listslide">
-                        <div class="slidewrap">
-                           <select>
-                              <option value="TRN">Transportation <span>(2)</span></option>
-                              <option value="PIA" lat="18.5793" lang="73.9106">Pune International Airport</option>
-                              <option value="PRS" lat="18.5289" lang="73.8744">Pune Railway Station</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="listslide">
-                        <div class="slidewrap">
-                           <select>
-                              <option value="EI">Education Institutes <span>(2)</span></option>
-                              <option value="LIS" lat="18.5820" lang="73.9865">The Lexicon International School, Wagholi</option>
-                              <option value="GHRC" lat="18.5826" lang="73.9850">GH Raisoni College of Engineering and Management</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="listslide">
-                        <div class="slidewrap">
-                           <select>
-                              <option value="BA">Banks & ATM <span>(2)</span></option>
-                              <option value="SBI" lat="18.548401" lang="73.904748">SBI ATM</option>
-                              <option value="ICICI" lat="18.536499" lang="73.900848"> ICICI Bank</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="listslide">
-                        <div class="slidewrap">
-                           <select>
-                              <option value="BH">Business Hubs <span>(2)</span></option>
-                              <option value="EIP" lat="18.5515" lang="73.9357">EON IT Park</option>
-                              <option value="WTCP" lat="18.5510" lang="73.9360">World Trade Center Pune</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="listslide">
-                        <div class="slidewrap">
-                           <select>
-                              <option value="MALL">Malls <span>(2)</span></option>
-                              <option value="PM" lat="18.5615" lang="73.9149">Phoenix Marketcity</option>
-                              <option value="AM" lat="18.5194" lang="73.9344">Amanora Mall</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="listslide">
-                        <div class="slidewrap">
-                           <select>
-                              <option value="FD">Fine Dining <span>(2)</span></option>
-                              <option value="TFW" lat="18.5396" lang="73.9028">The Flour Works</option>
-                              <option value="MS" lat="18.5365" lang="73.8934"> Malaka Spice</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="listslide">
-                        <div class="slidewrap">                            
-                           <select>
-                              <option value="FC">Fitness Centers <span>(2)</span></option>
-                              <option value="GGKN" lat="18.5483" lang="73.9045"> Gold's Gym Kalyani Nagar</option>
-                              <option value="TOFC" lat="18.5360" lang="73.8930">The O Fitness Club</option>
-                           </select>
-                        </div>
-                     </div>
+                      <!-- Medical Centres -->
+                      <div class="listslide">
+                          <div class="slidewrap">
+                              <select>
+                                  <option value="MC">Medical Centres <span>(2)</span></option>
+                                  <option value="CAH" lat="18.5512" lang="73.9350" proaddress="Kharadi, Pune, Maharashtra 411014">Columbia Asia Hospital</option>
+                                  <option value="MH" lat="18.5089" lang="73.9256" proaddress="Hadapsar, Pune, Maharashtra 411028">Noble Hospital</option>
+                              </select>
+                          </div>
+                      </div>
+                      <!-- Transportation -->
+                      <div class="listslide">
+                          <div class="slidewrap">
+                              <select>
+                                  <option value="TRN">Transportation <span>(2)</span></option>
+                                  <option value="PIA" lat="18.5793" lang="73.9106" proaddress="Lohegaon, Pune, Maharashtra 411032">Pune International Airport</option>
+                                  <option value="PRS" lat="18.5289" lang="73.8744" proaddress="Agarkar Nagar, Pune, Maharashtra 411001">Pune Railway Station</option>
+                              </select>
+                          </div>
+                      </div>
+                      <!-- Education Institutes -->
+                      <div class="listslide">
+                          <div class="slidewrap">
+                              <select>
+                                  <option value="EI">Education Institutes <span>(2)</span></option>
+                                  <option value="LIS" lat="18.5820" lang="73.9865" proaddress="Wagholi, Pune, Maharashtra 412207">The Lexicon International School, Wagholi</option>
+                                  <option value="GHRC" lat="18.5826" lang="73.9850" proaddress="Wagholi, Pune, Maharashtra 412207">GH Raisoni College of Engineering and Management</option>
+                              </select>
+                          </div>
+                      </div>
+                      <!-- Banks & ATM -->
+                      <div class="listslide">
+                          <div class="slidewrap">
+                              <select>
+                                  <option value="BA">Banks & ATM <span>(2)</span></option>
+                                  <option value="SBI" lat="18.548401" lang="73.904748" proaddress="Kalyani Nagar, Pune, Maharashtra 411006">SBI ATM</option>
+                                  <option value="ICICI" lat="18.536499" lang="73.900848" proaddress="Out Of The World, Svy No 26, Lane 7, Koregaon Park, Pune, Maharashtra 411001">ICICI Bank</option>
+                              </select>
+                          </div>
+                      </div>
+                      <!-- Business Hubs -->
+                      <div class="listslide">
+                          <div class="slidewrap">
+                              <select>
+                                  <option value="BH">Business Hubs <span>(2)</span></option>
+                                  <option value="EIP" lat="18.5515" lang="73.9357" proaddress="Kharadi, Pune, Maharashtra 411014">EON IT Park</option>
+                                  <option value="WTCP" lat="18.5510" lang="73.9360" proaddress="Kharadi, Pune, Maharashtra 411014">World Trade Center Pune</option>
+                              </select>
+                          </div>
+                      </div>
+                      <!-- Malls -->
+                      <div class="listslide">
+                          <div class="slidewrap">
+                              <select>
+                                  <option value="MALL">Malls <span>(2)</span></option>
+                                  <option value="PM" lat="18.5615" lang="73.9149" proaddress="S No. 207, Viman Nagar Road, Viman Nagar, Pune, Maharashtra 411014">Phoenix Marketcity</option>
+                                  <option value="AM" lat="18.5194" lang="73.9344" proaddress="Hadapsar, Pune, Maharashtra 411028">Amanora Mall</option>
+                              </select>
+                          </div>
+                      </div>
+                      <!-- Fine Dining -->
+                      <div class="listslide">
+                          <div class="slidewrap">
+                              <select>
+                                  <option value="FD">Fine Dining <span>(2)</span></option>
+                                  <option value="TFW" lat="18.5396" lang="73.9028" proaddress="Commercial 3, Nirvana, North Avenue, Near Jogger's Park, Kalyani Nagar, Pune, Maharashtra 411006">The Flour Works</option>
+                                  <option value="MS" lat="18.5365" lang="73.8934" proaddress="Lane 5, North Main Road, Opposite Oxford Properties, Koregaon Park, Pune, Maharashtra 411001">Malaka Spice</option>
+                              </select>
+                          </div>
+                      </div>
+                      <!-- Fitness Centers -->
+                      <div class="listslide">
+                          <div class="slidewrap">
+                              <select>
+                                  <option value="FC">Fitness Centers <span>(2)</span></option>
+                                  <option value="GGKN" lat="18.5483" lang="73.9045" proaddress="2nd Floor, Fortaleza Complex, Central Ave, above NM Medical, Kalyani Nagar, Pune, Maharashtra 411006">Gold's Gym Kalyani Nagar</option>
+                                  <option value="TOFC" lat="18.5360" lang="73.8930" proaddress="Koregaon Park, Pune, Maharashtra 411001">The O Fitness Club</option>
+                              </select>
+                          </div>
+                      </div>
                   </div>
-               </div>
+              </div>
             </div>
          </div>
+
          <div class="amenities relative featureamentities bg-white w-full mt-auto s:pt-160  pt-70">
             <div class="t-n-t gutter">
                <div class="uppercase w-full mt-auto justify-center text-12 flex relative s:text-center">
@@ -1715,7 +1724,6 @@
     let map;
     let villaMarker;
     let categoryMarkers = {}; // Object to store category-specific markers
-    let geocoder; // Geocoder instance
 
     function initMap() {
         const villaLocation = { lat: 18.5959, lng: 73.6506 }; // Villas location
@@ -1725,8 +1733,6 @@
             zoom: 13,
             center: villaLocation
         });
-
-        geocoder = new google.maps.Geocoder(); // Initialize geocoder
 
         // Add marker for villa location
         villaMarker = new google.maps.Marker({
@@ -1749,19 +1755,20 @@
         // Attach event listeners to all dropdowns
         document.querySelectorAll('.listslide select').forEach(select => {
             select.addEventListener('change', function () {
-                const category = select.options[0].value; // Get category value
+                const category = select.getAttribute('data-category'); // Get category
                 const selectedOption = select.options[select.selectedIndex];
                 const lat = parseFloat(selectedOption.getAttribute('lat'));
                 const lng = parseFloat(selectedOption.getAttribute('lang'));
+                const addressText = selectedOption.getAttribute('proaddress');
 
                 if (!isNaN(lat) && !isNaN(lng)) {
-                    updateMap(lat, lng, selectedOption.text, category);
+                    updateMap(lat, lng, selectedOption.text, category, addressText);
                 }
             });
         });
     }
 
-    function updateMap(lat, lng, title, category) {
+    function updateMap(lat, lng, title, category, address) {
         const selectedLocation = { lat, lng };
 
         // Remove previous marker for this category
@@ -1780,31 +1787,16 @@
         // Store the marker in the categoryMarkers object
         categoryMarkers[category] = marker;
 
-        // Get the address using reverse geocoding
-        geocoder.geocode({ location: selectedLocation }, (results, status) => {
-            if (status === "OK") {
-                if (results[0]) {
-                    const address = results[0].formatted_address;
+        // Info window for selected place
+        const infoWindow = new google.maps.InfoWindow({
+            content: `<div style="font-size: 14px;">
+                        <strong>${title}</strong><br>
+                        ${address ? address + "<br>" : ""}
+                      </div>`
+        });
 
-                    // Create an info window with the proper address
-                    const infoWindow = new google.maps.InfoWindow({
-                        content: `<div style="font-size: 14px;">
-                                    <strong>${title}</strong><br>
-                                    ${address}
-                                  </div>`
-                    });
-
-                    infoWindow.open(map, marker);
-
-                    marker.addListener('click', () => {
-                        infoWindow.open(map, marker);
-                    });
-                } else {
-                    console.error("No results found");
-                }
-            } else {
-                console.error("Geocoder failed due to: " + status);
-            }
+        marker.addListener('click', () => {
+            infoWindow.open(map, marker);
         });
 
         // Adjust map bounds to fit all active markers
@@ -1813,20 +1805,22 @@
 
     function adjustMapBounds() {
         const bounds = new google.maps.LatLngBounds();
-        bounds.extend(villaMarker.getPosition()); // Always include the villa
+        bounds.extend(villaMarker.getPosition()); // Always include the villa marker
 
-        // Add all active category markers
+        let hasMarkers = false;
         Object.values(categoryMarkers).forEach(marker => {
-            bounds.extend(marker.getPosition());
+            if (marker) {
+                bounds.extend(marker.getPosition());
+                hasMarkers = true;
+            }
         });
 
-        // Fit the map to show all markers
-        if (Object.keys(categoryMarkers).length > 0) {
+        // Fit the map to show all markers only if at least one exists
+        if (hasMarkers) {
             map.fitBounds(bounds);
         }
     }
 </script>
-
 
 
 <script 
